working for remote servers.

* Change to 1.2.0 feature "Down or Not-Serving instances will now get restarted periodically". The
time period of restart is now based on the tickTime/initLimit/syncLimit (if available). It will
be 2 * max of tickTime * initLimit or syncLimit.

* Issue 38: Include HTTP 403 in the AWS status codes that indicate an S3 object is not found.

1.2.3 - July 18, 2012
=====================
* Fixed some edge cases in pseudo lock that might leave lock files around

* File-based pseudo lock wasn't ignoring non-lock files

* Reworked backup indexing. There's not much value in having to choose which backup to index
so now all backups as well as the active logs are indexed. Also fixed some bugs in the UI.

* When the auto-manage instances state changes, clear the heartbeat. This avoids an edge case where
an instance will get cleaned immediately.

* Removed "Restarts When Unlisted" button. It doesn't have any meaning anymore.

* Log button should always be active if the Exhibitor instance can be reached.

1.2.2 - July 12, 2012
=====================
* Major bug: Starting a rolling config from the UI leaked S3 lock files which stopped
future config changes from committing.

1.2.1 - July 12, 2012
=====================
* Issue 32: PseudoLock contained an underscore in the prefix. Thanks to user "nmickuli".

1.2.0 - July 5, 2012
====================
* The S3Client could potentially leak connections due to https://forums.aws.amazon.com/message.jspa?messageID=296676

* Issue 26: Make sure default prefixes don't use underscore as it's reserved

* Include activity class name in log message

* Issue 28: log4j.properties wasn't being written correctly. Thanks to user "mgarski".

* Use the latest Curator version

* Lots of fixes/tweaks for automatic instance management.

* ExhibitorArguments is now constructed via a builder as there are too many combinations for
simple constructors. Note that there is an additional required ExhibitorArgument:
restPort.
