@@ -134,7 +134,7 @@ project(':exhibitor-core') {
             // JLine pulls this in as a compile dependency, they have fixed it in future versions
             exclude group: 'junit', module: 'junit'
         }
-        compile 'com.netflix.curator:curator-framework:1.0.15'
+        compile 'com.netflix.curator:curator-framework:1.0.17'
         compile 'com.google.guava:guava:11.0.1'
         compile 'javax.ws.rs:jsr311-api:1.1.1'
         compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.2'
@@ -145,7 +145,7 @@ project(':exhibitor-core') {
         compile 'com.sun.jersey:jersey-bundle:1.1.4'  // should be provided - gradle doesn't support
         compile 'com.sun.xml.bind:jaxb-impl:2.2.4'   // should be provided - gradle doesn't support
 
-        testCompile 'com.netflix.curator:curator-test:1.0.15'
+        testCompile 'com.netflix.curator:curator-test:1.0.17'
         testCompile 'org.mortbay.jetty:jetty:6.1.22'
         testCompile 'org.mockito:mockito-core:1.8.5'
     }
@@ -158,7 +158,7 @@ project(':exhibitor-standalone') {
         }
         compile 'com.sun.jersey:jersey-bundle:1.1.4'
         compile 'com.sun.xml.bind:jaxb-impl:2.2.5'
-        compile 'org.mortbay.jetty:jetty:6.1.9'
+        compile 'org.mortbay.jetty:jetty:6.1.22'
         compile 'com.google.guava:guava:11.0.1'
         compile 'commons-cli:commons-cli:1.2'
         compile 'com.amazonaws:aws-java-sdk:1.3.11'
